--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwitter</title>
+    <head>
+        <title>Kwitter</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap "rel="stylesheet">
-    <meta name="viewport" content="largura=largura do dispositivo, escala inicial=1">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href=" https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="kwitter.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
-</head>
-<body>
     
-    <center>
-        <h1 class="header">Kwitter<sup><img src="m2.png"></sup></h1>
+    <body>
+    
+        <center>
 
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
-            <img src="logo.png" class="logo">
-            <h3>Descubra o quê está acontecendo no mundo!</h3>
-            <h4>Junte-se ao Kwitter hoje.</h4>
+			<h1 class="header">	
+				Kwitter	<sup>
+				<img src="m2.png">
+				</sup>
+			</h1>
 
-            <div class="form-group">
-                <label>Nome de usuário</label>
-                <input type="text" id="user_name" class="form-control" placeholder="Nome de usuário">
-            </div>
+			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 
-            <button id="login_button" onclick="addUser()" class="btn btn-primary">Entrar</button>
-            <br>
-            <br>
-        </div>
-    </center>
+				<img src="logo.png" class="logo">
+				<h3 >Descubra o que está acontecendo no mundo</h3>
 
-</body>
+				<h4 >Junte-se ao Kwitter hoje</h4>
+		
+				<div class="form-group">
+
+		  			<label >Nome de Usuário:</label>
+		 			<!-- caixa de texto para inserir Nome de Usuário-->
+		 			<input type="text" id="user_name" class="form-control" placeholder="Nome de Usuário">
+
+				</div>
+
+				<!--botão entrar-->
+				<button id="login_button" onclick="addUser()" class="btn btn-primary">Entrar</button>
+				<br><br>
+
+			</div>
+
+		</center>
+		<script src="kwitter.js"></script>
+
+    </body>
 </html>
